# BooksStore

./: .gitignore  README.md  pyproject.toml  pytest.ini  Тестовое Задание для Стажера Python-Разработчика_ API для Библиотеки (1).docx
src/: .env.mock  .env.template  create_main_database.py  create_mock_database.py  main.py  mock_database.py
src/alembic/: env.py
src/alembic/versions/: 07edc4fe5ce7_create_all_tables.py  2025_06_09_0720-acfb9e384cc3_create_tables.py  2025_06_09_0955-f46c96c7c35e_add_constraints_for_books_table.py  2025_06_09_1111-c26f0c0b5aa1_create_all_tables.py  2025_06_10_0921-bf8fb9359c70_init_tables.py  2025_06_10_1135-9dfa98e51f77_fix_borrow_date_in_borrowed_books_table.py  2025_06_11_1549-1fa1d3e17c08_init_tables.py  2025_06_11_1631-f1532deaa8ee_add_field_description_in_books_table.py  247d61b7f8d5_added_relationship_between_tables.py  4213aa0f4a3f_added_relationship_between_tables.py
src/api/: __init__.py
src/api/auth/: auth_router.py  jwt_auth.py
src/api/books/: book_router.py  views.py
src/api/business/: business_router.py  views.py
src/api/users/: user_router.py  views.py
src/auth/: README.MD  __init__.py  creation_tokens.py  passwords.py  tools.py  tools_auth.py
src/core/: config.py  logger.py
src/core/models/: __init__.py  base.py  books.py  borrowed_books.py  db_helper.py  users.py
src/core/schemas/: auth_info.py  (+5 more)
src/crud/: auth.py  books.py  borrowed_books.py  users.py
src/repositories/: __init__.py  auth_repository.py  book_repository.py  borrowed_book_repository.py  user_repository.py
src/services/: __init__.py  book_service.py  borrowed_books_service.py  user_service.py
tests/: conftest.py  test_api.py  test_books_crud.py  test_users_crud.py
tests/repositories/: conftest.py  test_book_repository.py  test_borrowed_book_repository.py  test_user_repository.py
(+6 files in other folders)
